trunk/Archive2/9f/96bb2e6f894609/output
main.cpp:28:47: error: no member named 'runtime_error' in namespace 'std'
        default:                   throw std::runtime_error("bad type discriminator");
                                         ~~~~~^
1 error generated.
